# muduo-notes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UpdateLog  build.sh
.clangd/index/: Acceptor.cc.22916A01F75D5953.idx  Acceptor.h.0F00D46BDA24A6FA.idx  AsyncLogging.cc.6BA26EE82EF0F551.idx  AsyncLogging.h.AE2AF95D6E6F7CD9.idx  Atomic.h.00CD8B2C45F8ACF7.idx  BlockingQueue.h.E29F3DD3569959B9.idx  BoundedBlockingQueue.h.5C6273FC80D5BA2C.idx  Buffer.cc.807347D500EF7437.idx  Buffer.h.A603431F55939D2C.idx  Callbacks.h.F27402228251B904.idx  Channel.cc.FA072A9FB98D537C.idx  Channel.h.08EABE9BECB03BCE.idx  Condition.cc.0955711E112541AA.idx  Condition.h.123B476990D0CBA1.idx  Connector.cc.8656802D610770A0.idx  Connector.h.DE01C8D29E38064A.idx  CountDownLatch.cc.E0708B45F0D65108.idx  CountDownLatch.h.B7D84C75BBBD50B2.idx  CurrentThread.cc.C895098578541AD0.idx  CurrentThread.h.8AED6C9FFB67B267.idx  Date.cc.CD48669C7F7F07A3.idx  Date.h.F3F994DCA167FA4A.idx  DefaultPoller.cc.DF002EC467BBDC02.idx  EPollPoller.cc.03DF4532195460CE.idx  EPollPoller.h.5B184221B5E496C9.idx  Endian.h.6619BF5D7F5D6635.idx  EventLoop.cc.A1BA1C363E306DF4.idx  EventLoop.h.9DE285A946555760.idx  EventLoopThread.cc.19DE667F023393AA.idx  EventLoopThread.h.C60A5DEE84D1ADBD.idx  EventLoopThreadPool.cc.BBF9287967C180FD.idx  EventLoopThreadPool.h.010A9957683E4ACA.idx  Exception.cc.8375181DF9B328CD.idx  Exception.h.FA320F3DDB390FC2.idx  FileUtil.cc.6F48B0FAB193A9F3.idx  FileUtil.h.554CC9845D21F067.idx  HttpContext.cc.E3CDE45996555BD9.idx  HttpContext.h.EE029FF9C2F9093C.idx  HttpRequest.h.73DB2FBB16B3AA62.idx  HttpResponse.cc.1CCC2E0E45BFAB50.idx  (+83 more)
convey/: Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  LogFile.cc  LogFile.h  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Singleton.h  Thread.cc  Thread.h  ThreadLocalSingleton.h  ThreadPool.cc  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h  Types.h  copyable.h  noncopyable.h
convey/base/: AsyncLogging.cc  AsyncLogging.h  Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.cc  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Singleton.h  StringPiece.h  Thread.cc  Thread.h  ThreadLocal.h  ThreadLocalSingleton.h  ThreadPool.cc  ThreadPool.h  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h  Types.h  (+3 more)
convey/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
convey/net/http/: CMakeLists.txt  HttpContext.cc  HttpContext.h  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
convey/net/inspect/: CMakeLists.txt  Inspector.cc  Inspector.h  PerformanceInspector.cc  PerformanceInspector.h  ProcessInspector.cc  ProcessInspector.h  SystemInspector.cc  SystemInspector.h
convey/net/poller/: DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  PollPoller.cc  PollPoller.h
muduo/base/: AsyncLogging.cc  AsyncLogging.h  Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.cc  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Singleton.h  StringPiece.h  Thread.cc  Thread.h  ThreadLocal.h  ThreadLocalSingleton.h  ThreadPool.cc  ThreadPool.h  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h  Types.h  (+3 more)
muduo/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
muduo/net/http/: CMakeLists.txt  HttpContext.cc  HttpContext.h  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
muduo/net/inspect/: CMakeLists.txt  Inspector.cc  Inspector.h  PerformanceInspector.cc  PerformanceInspector.h  ProcessInspector.cc  ProcessInspector.h  SystemInspector.cc  SystemInspector.h
muduo/net/poller/: DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  PollPoller.cc  PollPoller.h
release-cpp11/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
release-cpp11/convey/: Makefile  cmake_install.cmake
release-cpp11/tests/: Makefile  cmake_install.cmake  test_atomic  test_thread
tests/: CMakeLists.txt  test_asynclogging.cc  test_atomic.cc  test_blockingqueue1.cc  test_channel.cc  test_copyable  test_copyable.cc  test_echoclient.cc  test_echoserver.cc  test_eventloop.cc  test_eventloopthread.cc  test_eventloopthreadpool.cc  test_exception.cc  test_httpserver.cc  test_inetaddress.cc  test_inspector.cc  test_logging.cc  test_logstream.cc  test_mutex.cc  test_processinfo.cc  test_singleton.cc  test_singletonthreadlocal.cc  test_tcpclient_reg1.cc  test_tcpclient_reg2.cc  test_tcpclient_reg3.cc  test_thread.cc  test_threadpool.cc  test_timerqueue.cc  test_timestamp.cc  test_timezone.cc
